# tauri-plugin-blec

./: Cargo.toml  README.md  build.rs  package.json
.cargo/: config  config.toml
.github/workflows/: docs.yml  rust.yml
android/: .gitignore  build.gradle.kts  local.properties
android/src/main/java/: BleClient.kt  BleClientPlugin.kt  Peripheral.kt
examples/plugin-blec-example/: package.json  vite.config.ts
examples/plugin-blec-example/src/: App.vue
examples/plugin-blec-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/plugin-blec-example/src-tauri/capabilities/: default.json
examples/plugin-blec-example/src-tauri/src/: lib.rs  main.rs
examples/plugin-blec-example/src/components/: BleDev.vue
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/test-server/: Cargo.toml
examples/test-server/src/: main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: android.rs  commands.rs  desktop.rs  error.rs  handler.rs  lib.rs  mobile.rs  models.rs
