[package]
name = "tauri-plugin-blec"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-blec"

[workspace]
members = [
    "examples/plugin-blec-example/src-tauri",
    "examples/test-server"
]

[dependencies]
tauri = { version = "2.0.6", features = ["wry"] }
serde = "1.0"
thiserror = "1.0"
btleplug = {version="0.11.6",features=["serde"]}
tokio = "1.40.0"
uuid = "1.11.0"
once_cell = "1.20.2"
tracing = "0.1.40"
futures = { version = "0.3.31", default-features = false }

# [target.'cfg(target_os = "android")'.dependencies]
async-trait = "0.1.83"
serde_json = "1"
tokio-stream = "0.1.16"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
tauri-build = "2.0.1"
